Tried adding a little margin between the two photos, to break them up a little. I don't know if it helps - I didn't get the unnerving feeling from having two pictures so I don't know how to go about fixing it. (If we're only going to have one photo, then perhaps a wide-angle shot would be best?)

--- a/css/style.css
+++ b/css/style.css
@@ -294,8 +294,11 @@ a:hover{
           margin: 0;
      }
      #Directions .twoColContainer{
-          justify-content: space-between;
+          justify-content: space-evenly;
           align-items: flex-end;
+     }
+     #Directions .twoColContainer > *{
+          max-width: 49%;
      }
      .imgWithOverlay{
           position: relative;
